--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Doop</title>
+    <link rel="stylesheet" href="styles.css">
     <script defer src="main.dart" type="application/dart"></script>
 </head>
 <body>
