--- a/example/index.html
+++ b/example/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Doop</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="main.dart" type="application/dart"></script>
+    <script defer src="main.dart.js" type="application/javascript"></script>
 </head>
 <body>
-    <div id = "content"></div>
+    <div id = "content">testing???</div>
 </body>
 </html>
