--- a/example/testCredits.html
+++ b/example/testCredits.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Dip</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="displayCreditsTest.dart" type="application/dart"></script>
+    <script defer src="displayCreditsTest.dart.js" type="application/javascript"></script>
 </head>
 <body>
     <div id = "content"></div>
